- selectworkspace issue